1.19.1-5.0.1:
- Fix for 1.19.1

1.19-5.0.0:
- Port to 1.19

1.18-4.0.13:
- Fixed a problem with the builder when copying a wither structure it would duplicate one wither skull
- Blocks with the tag 'dontremoveme' didn't let the Builder consume power
- Fixed the shield not updating when redstone is toggled

1.18-4.0.12:
- Fixed a problem on servers

1.18-4.0.11:
- Added a new block tag rftoolsbuilder:dontremoveme which the Builder will respect and in which case the Builder will not remove the block (or replace with dirt)

1.18-4.0.10:
- Fixed the support block causing blocks to be placed wrong in copy mode. Support blocks now have material STRUCTURAL_AIR
- Fixed the translated name for the support block

1.18-4.0.9:
- When manually clearing builder support blocks they will now also check diagonally
- To prevent support blocks from not being cleared support mode is now automatically disabled when changing the settings on the shape card

1.18-4.0.8:
- Port to 1.18.2

1.18-4.0.7:
- Fixed a bug with the shield on some locales (Turkish)

1.18-4.0.6:
- Fix where preview of the support blocks would break due to wrong side

1.18-4.0.5:
- Fixed the DIRT tag to be compatible with latest Forge

1.18-4.0.4:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-4.0.3:
- Fixed another spot where the shield was not working below 0

1.18-4.0.2:
- Fixed shield being able to go below 0

1.18-4.0.1:
- Updates for McJtyLib and fixes
- Some fixes to the shield rendering
- The Builder can now quarry below 0 and above 255

1.18-4.0.0:
- First release on 1.18

1.16-3.1.4:
- Updated to latest version of McJtyLib

1.16-3.1.3:
- Updated to latest version of McJtyLib
- The hud for the Builder is full bright again making it easier to read

1.16-3.1.2:
- Fixed the shield so that it blocks more passive creatures (like villagers)

1.16-3.1.1:
- The builder and shield projector use a better fake player that matches the name of the real player if online