@@ -3,6 +3,7 @@ package mcjty.rftoolsbuilder.setup;
 
 import mcjty.rftoolsbuilder.keys.KeyBindings;
 import mcjty.rftoolsbuilder.keys.KeyInputHandler;
+import net.minecraftforge.client.event.RegisterKeyMappingsEvent;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 
@@ -13,6 +14,9 @@ public class ClientSetup {
             ClientCommandHandler.registerCommands();
         });
         MinecraftForge.EVENT_BUS.register(new KeyInputHandler());
-        KeyBindings.init();
+    }
+    
+    public static void registerKeyBinds(RegisterKeyMappingsEvent event) {
+        KeyBindings.init(event);
     }
 }
